@@ -1,5 +1,6 @@
 qtile 0.10.7, released 2017-02-14:
     * features
+        - allow uvloop to be configured as event loop
         - new MPD widget, widget.MPD2, based on `mpd2` library
         - add option to ignore duplicates in prompt widget
         - add additional margin options to GroupBox widget
